hphp/test/zend/good/tests/classes/autoload/autoload_010.php
<?hh

class ImplementsUndefinedInterface implements UndefI
{
}

<<__EntryPoint>>
function autoload_010(): void {
  echo "Done.\n";
}
