hphp/test/zend/bad/errmsg_015.php
<?php

class test {
	function __clone($var) {
	}
}

echo "Done\n";
?>